# xleague_stats_analyzer

./: .gitignore  README.md  config.json  pyproject.toml  teams.json
.github/workflows/: e2e-test.yml  run_unit_tests.yaml
src/: break_drive_chart.py  break_personal_stats.py  break_team_stats.py  logger.py  logics.py  main.py  main_multi.py  models.py  summarize_data.py  utils.py
src/tests/: test_logger.py  test_models.py  test_utils.py
test/: test_e2e.py
test/data/result/: opponent_stats.csv  team_stats.csv
