[project]
name = "xleague-stats-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "kaleido==0.2.1",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.0",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.2",
    "pytest>=8.3.4",
    "scipy>=1.15.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.9.4",
    "tqdm>=4.67.1",
]
