[project]
name = "xleague-stats-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "kaleido==0.2.1",
    "mypy>=1.15.0",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.0",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.2",
    "pytest>=8.3.4",
    "scipy>=1.15.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "ruff>=0.9.4",
    "tqdm>=4.67.1",
    "coverage>=7.6.0",
    "pytest-cov>=6.0.0",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/main.py",
    "src/main_multi.py",
    "src/run.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["src/tests", "test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"
